Info view documents
Ajout des informations d’aide pour la section documents

--- a/app/views/documents.html
+++ b/app/views/documents.html
@@ -27,7 +27,10 @@
 			<div class="trigger">
 				<h1>?</h1>
 				<div class="tooltip_help">
-					<p>Blublublublublublublub blublublublub</p>
+					<p>Dans cette section sont stockés toutes les pièces à conviction récoltées par notre détéctive.</p>
+          <p>Chaque document raconte une partie de la vie du boss et te sera fourni au fur et à mesure de ton expérience.</p>
+          <p>Plusieurs documents sont disponible par événement et certains peuvent être visonnés dans leur langue originale.</p>
+          <p>Gentiment tu découvrira qui se cache vraiment derrière cette organisation mafieuse.</p>
 				</div>
 			</div>
 		</div>	
