--- a/app/views/login.html
+++ b/app/views/login.html
@@ -19,7 +19,7 @@
             <div class="col-md-2">  <img src="img/mafiosiAvatar.png"class="img-responsive img-round" alt="..."></div>
          </div>
          <div class="col-md-12 description">
-            <div>
+            <div class="col-md-12">
                <h1>Comment jouer</h1>
                <p>Vous disposez dans l'ACTION MAP d'une carte d'Yverdon-les-Bains qui vous indiquera les emplacements de toutes les actions disponibles sur la plateforme mobile. Pour les effectuer, quittez votre QG armés d'un téléphone intelligent et rendez-vous près de ces lieux. Le combat se passe aussi dans les rues !</p>
                <p>La TACTIC MAP sera votre arme de prédilection depuis ce QG. c'est grâce à elle que vous pourrez effectuer des actions plus globales qui affecteront les quartiers de la ville. En effectuant ces actions, vous diminuerez l'influence de la Mafia sur les quartiers en question. Si vous effectuez suffisamment d'actions sur les quartiers, vous aurez la possibilité de débloquer le profil du mafieux le gère. "Connais ton ennemi", dans ce cas, ils sont 12 à imposer leur cartel sur Yverdon</p>
