--- a/app/views/documents.html
+++ b/app/views/documents.html
@@ -27,10 +27,9 @@
 			<div class="trigger">
 				<h1>?</h1>
 				<div class="tooltip_help">
-					<p>Dans cette section sont stockés toutes les pièces à conviction récoltées par notre détéctive.</p>
-          <p>Chaque document raconte une partie de la vie du boss et te sera fourni au fur et à mesure de ton expérience.</p>
-          <p>Plusieurs documents sont disponible par événement et certains peuvent être visonnés dans leur langue originale.</p>
-          <p>Gentiment tu découvrira qui se cache vraiment derrière cette organisation mafieuse.</p>
+					<p>Dans cette section sont stockées toutes les pièces à conviction récoltées par nos détéctives.</p>
+          <p>Ces documents devraient nous permettres de lever le voile sur cette organisation mafieuse.</p>
+          <p>Dans le cas où un document serait en langue originale, une version traduite te sera fournie.</p>
 				</div>
 			</div>
 		</div>	
