--- a/app/views/login.html
+++ b/app/views/login.html
@@ -16,7 +16,7 @@
                <p>Bienvenue dans votre QG. C'est ici que vous aurez accès aux divers moyens que nous avons mis en place pour combattre la mafia. Vous pouvez effectuer des actions offensives et en récompense, vous recevrez des points d'XP qui vous feront petit à petit grader au sein de La Resistance. De plus, au fur et à mesure des actions accomplies, vous glanerez des pièces à conviction accablantes contre la Mafia et son mystérieux Boss…</p>
                <a href="#" class="text-right">en savoir +</a>
             </div>
-            <div class="col-md-2">  <img src="img/mafiosiAvatar.png"class="img-responsive img-round" alt="..."></div>
+            <div class="col-md-2">  <img src="img/mafiosiAvatarBlue.png"class="img-responsive img-round" alt="..."></div>
          </div>
          <div class="col-md-12 description">
             <div class="col-md-12">
