--- a/app/views/login.html
+++ b/app/views/login.html
@@ -16,14 +16,14 @@
                <p>Bienvenue dans votre QG. C'est ici que vous aurez accès aux divers moyens que nous avons mis en place pour combattre la mafia. Vous pouvez effectuer des actions offensives et en récompense, vous recevrez des points d'XP qui vous feront petit à petit grader au sein de La Resistance. De plus, au fur et à mesure des actions accomplies, vous glanerez des pièces à conviction accablantes contre la Mafia et son mystérieux Boss…</p>
                <a href="#" class="text-right">en savoir +</a>
             </div>
-            <div class="col-md-2">  <img src="img/mafiosiAvatarBlue.png"class="img-responsive img-round" alt="..."></div>
+            <div class="col-md-2">  <img src="img/mafiosiAvatar.png"class="img-responsive img-round" alt="..."></div>
          </div>
          <div class="col-md-12 description">
             <div class="col-md-12">
                <h1>Comment jouer</h1>
                <p>Vous disposez dans l'ACTION MAP d'une carte d'Yverdon-les-Bains qui vous indiquera les emplacements de toutes les actions disponibles sur la plateforme mobile. Pour les effectuer, quittez votre QG armés d'un téléphone intelligent et rendez-vous près de ces lieux. Le combat se passe aussi dans les rues !</p>
-               <p>La TACTIC MAP sera votre arme de prédilection depuis ce QG. c'est grâce à elle que vous pourrez effectuer des actions plus globales qui affecteront les quartiers de la ville. En effectuant ces actions, vous diminuerez l'influence de la Mafia sur les quartiers en question. Si vous effectuez suffisamment d'actions sur les quartiers, vous aurez la possibilité de débloquer le profil du mafieux le gère. "Connais ton ennemi", dans ce cas, ils sont 12 à imposer leur cartel sur Yverdon</p>
-               <p>L'onglet des PIÈCES À CONVICTION reccueille tous les documents que vous aurez récupérés durant le jeu. Documents textes, sons, vidéos etc, ce sont autant d'indices qui vous permettront de vous plonger dans le réseau mafieux pour tenter de mieux comprendre l'histoire de la vie du Boss</p>
+               <p>La TACTIC MAP sera votre arme de prédilection depuis ce QG. c'est grâce à elle que vous pourrez effectuer des actions plus globales qui affecteront les quartiers de la ville. En effectuant ces actions, vous diminuerez l'influence de la Mafia sur les quartiers en question. Si vous effectuez suffisamment d'actions sur les quartiers, vous aurez la possibilité de débloquer le profil du mafieux qui le gère. "Connais ton ennemi", dans ce cas, ils sont 12 à imposer leur cartel sur Yverdon</p>
+               <p>L'onglet des PIÈCES À CONVICTION reccueille tous les documents que vous aurez récupérés durant le jeu. Documents textes, sons, vidéos etc, ce sont autant d'indices qui vous permettront de vous plonger dans le réseau mafieux pour tenter de mieux comprendre cette organisation.</p>
                <p>Finalement, la page MAFIA vous laissera visualiser les profils des mafieux que vous aurez débloqués au fil du jeu. Explorez cette grande famille et découvrez leurs sombres secrets pour mieux les détruire !</p>
                <ul class="tuto">
                 <li>
