Mise en page login
Ajout lien google play et QRcode

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -111,5 +111,11 @@
          </div>
          <!-- \. MainLogin -->
       </div>
+
+      <div>
+         <a href="https://play.google.com/store/apps/details?id=ch.comem.hydromerta"><img src="img/googlePlay.png" alt="Application Android Hydromerta"/></a>
+      </div>>
+
+
    </div>
 </div>
