--- a/app/views/login.html
+++ b/app/views/login.html
@@ -16,7 +16,7 @@
                <p>Bienvenue dans votre QG. C'est ici que vous aurez accès aux divers moyens que nous avons mis en place pour combattre la mafia. Vous pouvez effectuer des actions offensives et en récompense, vous recevrez de l'expérience qui vous fera petit à petit monter en grade au sein de la Resistance. De plus, au fur et à mesure des actions accomplies, vous glanerez des pièces à conviction accablantes contre la Mafia et son mystérieux Boss…</p>
                <button class="btn btn-default btn-credit" ng-click="openCredits()">Crédits</button>
                <div class="col-md-3 col-md-offset-1 login">
-                  <a href="https://play.google.com/store/apps/details?id=ch.comem.hydromerta"><img src="img/googlePlay.jpg" alt="Application Android Hydromerta"/></a>
+                  <a href="https://play.google.com/store/apps/details?id=ch.comem.hydromerta"><img src="img/googlePlay.png" alt="Application Android Hydromerta"/></a>
                </div>
             </div>
             <div class="col-md-2">  <img src="img/mafiosiAvatar.png"class="img-responsive img-round" alt="..."></div>
