--- a/app/views/headerGame.html
+++ b/app/views/headerGame.html
@@ -10,7 +10,7 @@
         <span class="xp">xp </span>
         <span ng-bind="nbXP"></span><span>pts</span> <span ng-show="level<11">/</span> 
         <span ng-bind="nextLvlXP" ng-show="level<11"></span><span ng-show="level<11">pts</span>
-        <i class="glyphicon glyphicon-star userInfos"></i>
+        <span class="icon-premiere_classe"></span>
         <span ng-bind="playerRank | uppercase"></span>
         <span ng-bind="playerInfos"></span>       
         <div class="loader_wrap">
