--- a/app/views/login.html
+++ b/app/views/login.html
@@ -14,13 +14,22 @@
                <h1>hydromerta</h1>
                <p>Dans un futur proche, l’eau est devenue une denrée rare. Une société mafieuse en a pris le contrôle il y a de cela plusieurs années et tient toute la population d’Yverdon-les-Bains sous son joug. À vous, les joueurs, de vous rebeller contre cet empire pour rendre l’eau de nouveau libre d’accès.</p>
                <p>Bienvenue dans votre QG. C'est ici que vous aurez accès aux divers moyens que nous avons mis en place pour combattre la mafia. Vous pouvez effectuer des actions offensives et en récompense, vous recevrez de l'expérience qui vous fera petit à petit monter en grade au sein de la Resistance. De plus, au fur et à mesure des actions accomplies, vous glanerez des pièces à conviction accablantes contre la Mafia et son mystérieux Boss…</p>
+               <p>Mais l'offensive devant l'ordinateur ne suffit pas à remporter la guerre… Pour profiter au maximum de l'univers Hydromerta et de la richesse des contenus que nous vous avons concoctés, il est nécessaire de posséder un téléphone plus ou moins intelligent. Téléchargez l'application sur le  <a href="https://play.google.com/store/apps/details?id=ch.comem.hydromerta">Google Play Store</a> et accédez ainsi à une expérience complémentaire !
+               </p><!--
+
                <button class="btn btn-default btn-credit" ng-click="openCredits()">Crédits</button>
                <img src="img/QRcode.png"> 
                <div class="col-md-3 col-md-offset-1 login">
                   <a href="https://play.google.com/store/apps/details?id=ch.comem.hydromerta"><img src="img/googlePlay.png" alt="Application Android Hydromerta"/></a>
                </div>
+-->
             </div>
-            <div class="col-md-2">  <img src="img/mafiosiAvatar.png"class="img-responsive img-round" alt="..."></div>
+            <div class="col-md-2 side">  <img src="img/mafiosiAvatar.png"class="img-responsive img-round" alt="...">
+	            
+               <div class="mobile"><img src="img/QRcode.png"> 
+	            <a href="https://play.google.com/store/apps/details?id=ch.comem.hydromerta"><img src="img/googlePlay.png" alt="Application Android Hydromerta"/></a>
+	            <button class="btn btn-default btn-credit" ng-click="openCredits()">Crédits</button></div>
+            </div>
          </div>
          <div class="col-md-12 description">
             <div class="col-md-12">
