--- a/app/views/headerGame.html
+++ b/app/views/headerGame.html
@@ -18,41 +18,28 @@
           </div>
         </div>
       </div>
-      <ul class="nav navbar-nav notifResistance">
+      <ul class="nav navbar-nav notifResistance" ng-controller="MessagesCtrl">
         <li class="dropdown">
-        <a href="" class="dropdown-toggle resistance-a" data-toggle="dropdown" role="button" aria-expanded="false"><i class="icoResistance icon-notification"></i><!--<i class="badge">99</i>--></a>
+        <a class="dropdown-toggle resistance-a" data-toggle="dropdown" role="button" aria-expanded="false"><i class="icoResistance icon-notification"></i><!--<i class="badge">99</i>--></a>
           <ul class="dropdown-menu" role="menu">
-            <li>
+            <li ng-repeat="message in messages">
               <section class="row">
                 <div class="col-md-11">
-                  <h1>TitreNotife</h1>
-                  <p>Text...</p>
+                  <h1>{{message.title}}</h1>
+                  <p>{{message.content}}</p>
                 </div>
                 <div class="col-md-1 closeNotification">
-                  <a href="#"><span class="icon-cross"></span></a>                  
+                  <a ng-click="closeMessage(message)"><span class="icon-cross"></span></a>
                 </div>
               </section>
             </li>
-            <li class="divider"></li>
-            <li>
-             <section class="row">
-              <div class="col-md-11">
-                <h1>TitreNotife</h1>
-                <p>Text...</p>
-              </div>
-              <div class="col-md-1 closeNotification">
-                <a href="#"><span class="icon-cross"></span></a>                  
-              </div>
-            </section>         
-          </li>
-          <li class="divider"></li>
-          <li class="moreNotification"><a href="">plus de notification</a></li>
-        </ul>
-      </li>
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-      <li><a ng-href="#/" ng-click="logoutFunc()"><img src="img/logout.svg" height="30px" width="30px" alt="Logout" /></a></li>
-    </ul>
+            <!--<li class="divider"></li>-->
+          </ul>
+        </li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a ng-href="#/" ng-click="logoutFunc()"><img src="img/logout.svg" height="30px" width="30px" alt="Logout" /></a></li>
+      </ul>
+    </div>
   </div>
-</div>
 </nav>
