add message controller

--- a/app/views/actions.html
+++ b/app/views/actions.html
@@ -54,7 +54,7 @@
                         </tr>-->
                         <tr>
                             <th>Baisse d'influence</th>
-                            <td>{{markerSelected.expectedDrop}}%</td>
+                            <td>{{markerSelected.properties.influence}}%</td>
                         </tr>
                         <tr>
                             <th>cooldown</th>
