Début de gestion de la page d'introduction

--- a/app/views/headerGame.html
+++ b/app/views/headerGame.html
@@ -38,7 +38,7 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a ng-href="#/" ng-click="logoutFunc()"><img src="img/logout.svg" height="30px" width="30px" alt="Logout" /></a></li>
+        <li><a ng-href="#/" ng-click="logoutFunc()"><img src="img/logout.svg" height="30" width="30" alt="Logout" /></a></li>
       </ul>
     </div>
   </div>
