--- a/app/views/tactic.html
+++ b/app/views/tactic.html
@@ -55,7 +55,7 @@
               <td>{{actionSelected.influence}}%</td>
             </tr>
             <tr>
-              <th>Dispoblie dans</th>
+              <th>Disponible dans</th>
               <td>{{actionSelected.disponibility}}</td>
             </tr>
           </table>
