--- a/app/views/login.html
+++ b/app/views/login.html
@@ -26,8 +26,8 @@
             </div>
             <div class="col-md-2 side">  <img src="img/mafiosiAvatar.png"class="img-responsive img-round" alt="...">
 	            
-               <div class="mobile"><img src="img/QRcode.png"> 
-                   <a href="https://play.google.com/store/apps/details?id=ch.comem.hydromerta" target="blank"><img src="img/googlePlay.png" alt="Application Android Hydromerta"/></a>
+               <div class="mobile"><img src="img/QRcode.png" class="img-responsive"> 
+                   <a href="https://play.google.com/store/apps/details?id=ch.comem.hydromerta" target="blank"><img src="img/googlePlay.png" alt="Application Android Hydromerta" class="img-responsive"/></a>
 	            <button class="btn btn-default btn-credit" ng-click="openCredits()">Crédits</button></div>
             </div>
          </div>
