Fixer (?) le bug mysthique de la vidéo

--- a/app/views/actions.html
+++ b/app/views/actions.html
@@ -68,7 +68,7 @@
               <button 
                 type="button" 
                 class="btn btn-default btn-dash" 
-                ng-click="makeActionPoint()">EFFECTUER</button>
+                disabled>A FAIRE SUR MOBILE</button>
             </section>
 
      
