--- a/app/styles/bootstrap.css
+++ b/app/styles/bootstrap.css
@@ -10,6 +10,9 @@ button:active {
   outline: 0;
   border: 0;
 }
+.subDash {
+  margin-bottom: 10px;
+}
 button:focus {
   outline: 0;
 }
@@ -276,13 +279,15 @@ div.dashboard-footer {
 .dash_secteurs .secteur_qte p {
   position: absolute;
   font-size: 1.8em;
+  font-weight: bold;
   width: 100%;
   top: 22%;
   margin: 0;
   left: 0;
 }
 .dash_secteurs .secteur_qte p i {
-  color: #49a9cf;
+  color: #40758d;
+  font-style: normal;
 }
 .dash_secteurs .secteur_titre h1 {
   margin-top: 5px;
