--- a/app/views/tactic.html
+++ b/app/views/tactic.html
@@ -68,7 +68,7 @@
             ng-click="makeAction(actionSelected.id)">EFFECTUER</button>
         </section>
       </div>
-      <div class="row">
+      <div class="row subDash">
         <section class="col-md-offset-1 col-md-1" >
           <img src="{{sectorSelected.fullLinkImg}}" class="img-responsive img-round" alt="imageMafioso">
         </section>
