--- a/app/views/actions.html
+++ b/app/views/actions.html
@@ -67,8 +67,7 @@
             <section class="col-md-2 col-md-offset-1 pull-down dash_btn">
               <button 
                 type="button" 
-                class="btn btn-default btn-dash" 
-                ng-click="makeActionPoint()">EFFECTUER</button>
+                class="btn btn-default btn-dash">EFFECTUER</button>
             </section>
 
      
