--- a/app/views/modal.html
+++ b/app/views/modal.html
@@ -5,57 +5,64 @@
 <div class="modal-body">
   <section ng-controller="panelController as panel">
     <ul class="nav nav-pills">
-      <li ng-class="{ active:panel.isSelected(1) }" ng-show="'{{items.versionUrl}}' || '{{items.versionHtml}}'">
-       <a href ng-click="panel.selectTab(1)">Iamge FR</a>
+      <li ng-show="'{{items.versionUrl}}' || '{{items.versionHtml}}'">
+       <a href ng-click="changeSrc(items.src, 1)">Version IT</a>
+       <!--<a href ng-click="panel.selectTab(1)">Iamge IT</a>-->
      </li>
-     <li ng-class="{ active:panel.isSelected(2) }" ng-show="{{items.versionUrl}}">
-      <a href ng-click="panel.selectTab(2)">Image IT</a>
+     <li ng-show="{{items.versionUrl}}">
+      <!--<a href ng-click="panel.selectTab(2)">Image IT</a>-->
+      <a href ng-click="changeSrc(items.versionUrl, 2)">Version FR</a>
     </li>
-    <li ng-class="{ active:panel.isSelected(3) }" ng-show="{{items.templateHtml}}">
-      <a href ng-click="panel.selectTab(3)">HTML</a>
+    <li ng-show="{{items.templateHtml}}">
+      <a href ng-click="showHTML()">{{html.title}}</a>
+      <!--<a href ng-click="panel.selectTab(3)">HTML</a>-->
     </li>
   </ul>
   <div class="panel" ng-show="panel.isSelected(1)">
-    <div ng-show="'{{items.type}}'=='image'">
-      <img ng-src="{{rootUrl}}{{items.src}}" class="img-responsive">
+    <div ng-show="html.show">
+        <section ng-include="rootUrl + items.templateHtml"></section>
+    </div>
+    <div ng-show="items.type=='image' && !html.show">
+      <img ng-src="{{itemSrc}}" class="img-responsive">
     
     </div>
 
-    <div ng-show="'{{items.type}}'=='photo'">
-      <img ng-src="{{rootUrl}}{{items.src}}" class="img-responsive">
+    <div ng-show="items.type=='photo' && !html.show">
+      <img ng-src="{{itemSrc}}" class="img-responsive">
     </div>
 
-    <div ng-show="'{{items.type}}'=='audio'">
+    <div ng-show="items.type=='audio' && !html.show">
     <div class="form-group">
-            <button class="btn btn-primary ng-binding btn-sound" ng-click="toggle = !toggle; audio.paused ? audio.play() : audio.pause()">{{toggleText}}</button>
-            <button class="btn btn-danger btn-sound" ng-click="audio.restart()">Stop</button>
-            <button class="btn btn-neutral ng-binding btn-sound" ng-click="audio.muting = !audio.muting">Mute</button>      
- </div>
+        <button class="btn btn-default ng-binding btn-sound" ng-click="toggle = !toggle; audio.paused ? audio.play() : audio.pause()">Lecture</button>
+        <button class="btn btn-danger btn-sound" ng-click="audio.restart()">Stop</button>
+        <button class="btn btn-neutral ng-binding btn-sound" ng-click="audio.muting = !audio.muting">Mute</button>      
+    </div>
  
 
 
-        <div class="input-group">
+    <div class="input-group">
         <span class="input-group-addon glyphicon glyphicon glyphicon-dashboard"></span>
         <input class='form-control ng-pristine ng-valid' type=range min=0 max=1 step=0.001 ng-model='audio.progress'>
-       </div>
+    </div>
 
 
     <div class="input-group">
         <span class="input-group-addon glyphicon glyphicon-volume-up"></span>
         <input class='form-control ng-pristine ng-valid' type=range min=0 max=1 step=0.001 ng-model='audio.volume'>
-       </div>
-
-
+        </div>
+    </div>
         
 
-    <div ng-show="'{{items.type}}'=='video'">
-    <embed-video iframe-id="vimeo1" api="1" player_id="vimeo1"  width="800px" height="600px" ng-href="{{items.src}}"></embed-video>
+    <div ng-show="items.type=='video' && !html.show">
+        <embed-video iframe-id="vimeo1" api="1" player_id="vimeo1"  width="800px" height="600px" ng-href="'{{itemSrc}}'"></embed-video>
     </div>
+      
+        
   </div>
 
   <div class="panel" ng-show="panel.isSelected(2)">
    <div ng-show="'{{items.type}}'=='image'">
-    <img ng-src=" {{rootUrl}}{{items.versionUrl}}" class="img-responsive">
+    <img ng-src=" {{rootUrl+items.versionUrl}}" class="img-responsive">
   </div>
 
 
