--- a/app/views/documents.html
+++ b/app/views/documents.html
@@ -1,8 +1,6 @@
 <div ng-controller="DocumentsCtrl">
 
-  
-
-  <div class="col-md-11 col-md-offset-1"><!--contenu-->
+  <div class="col-md-11 col-md-offset-1">
     <div class="col-md-12 piecesConviction">
 
     <div class="col-md-3 piecesCollection" ng-repeat="document in documentsList">
@@ -16,11 +14,7 @@
       </div>
 
     </div>
-
-
-
-
-    </div><!---->
+    </div>
   </div>
   <div id="help">
 		<div class="help_icon_wrap">
@@ -34,4 +28,4 @@
 			</div>
 		</div>	
 	</div>
-</div><!--\.contenu-->
+</div>
