--- a/app/views/headerGame.html
+++ b/app/views/headerGame.html
@@ -20,7 +20,7 @@
       </div>
       <ul class="nav navbar-nav notifResistance" ng-controller="MessagesCtrl" ng-show="hasMessages">
         <li class="dropdown">
-        <a class="dropdown-toggle resistance-a" data-toggle="dropdown" role="button" aria-expanded="false"><i class="icoResistance icon-notification"></i><!--<i class="badge">99</i>--></a>
+        <a class="dropdown-toggle resistance-a" data-toggle="dropdown" role="button" aria-expanded="false"><i class="icoResistance icon-notification"></i></a>
           <ul class="dropdown-menu" role="menu">
             <li ng-repeat="message in messages | reverse">
               <section class="row">
@@ -33,7 +33,7 @@
                 </div>
               </section>
             </li>
-            <!--<li class="divider"></li>-->
+            
           </ul>
         </li>
       </ul>
